force-app/main/default/objects/Fax_To_Case_Queue_Backups__c/Fax_To_Case_Queue_Backups__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to manage email assignment settings</description>
    <label>Fax To Case Email Assignments</label>
</CustomObject>