force-app/main/default/objects/Fax_To_Case_Queue_Backups__c/fields/Alert_Emails__c.field-meta.xml
<CustomField>
    <fullName>Alert_Emails__c</fullName>
    <description>Enter emails, separated by semi-colon to alert if a case is unable to be updated after an out-of office reply comes in.</description>
    <label>Alert Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>