force-app/main/default/objects/Fax_To_Case_Queue_Backups__c/fields/Case_assignment_template__c.field-meta.xml
<CustomField>
    <fullName>Case_assignment_template__c</fullName>
    <label>Case Assignment Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>