force-app/main/default/objects/Fax_To_Case_Queue_Backups__c/fields/Org_Wide_Email_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_Email_Display_Name__c</fullName>
    <description>The display name of the org wide email address to send case assignment email from</description>
    <label>Org Wide Email Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>